--- a/src/components/entry/Main.css
+++ b/src/components/entry/Main.css
@@ -23,7 +23,7 @@ ul.header li a {
 
 .content {
     background-color: #FFF;
-    padding: 20px;
+    padding: 5px;
 }
 
 .content h2 {
